# projetofinalATP-AL

./: .gitignore  CMakeLists.txt  Makefile  README.md  algebra.h  autovaloresAutovetores.c  main.c  matriz.c  menu.c  parser.c  sistema.c  transformacao.c
arquivos_exemplo/: op1_sistema.txt  op2_transformacao.txt  op3_base.txt  op4_autovalores.txt  op5_diagonalizacao.txt
